tests/baselines/reference/parserES5SymbolProperty7.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty7.ts(2,6): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty7.ts (1 errors) ====
    class C {
        [Symbol.toStringTag](): void { }
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }